--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 *.pyc
+/Splendor/RL/Trained Agents
+/Splendor/Environment/Splendor_components/Board_components/__pycache__
+/Splendor/meta
+/Splendor/RL/trained_agents
