--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Splendor/meta
 /Splendor/RL/trained_agents
 /Splendor/meta
+Splendor/states.csv
+Splendor/next_states.csv
+*.pkl
+Splendor/To-Do list.txt
