--- a/Splendor/.devcontainer/devcontainer.json
+++ b/Splendor/.devcontainer/devcontainer.json
@@ -14,8 +14,8 @@
         "--net=host"
     ],
     "workspaceFolder": "/workspace",
-    // "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
-    "workspaceMount": "source=/host_mnt/c/Program Files/Coding Programs/GitHub/Splendor-AI/Splendor,target=/workspace,type=bind,consistency=cached", 
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
+    // "workspaceMount": "source=/host_mnt/c/Program Files/Coding Programs/GitHub/Splendor-AI/Splendor,target=/workspace,type=bind,consistency=cached", 
     "customizations": {
         "vscode": {
             "settings": { 
