--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Splendor/next_states.csv
 *.pkl
 /Splendor/RL/saved_files/rendered_games
 /Splendor/RL/saved_files/game_states
+/Splendor/RL/saved_files/tensorboard_logs
