--- a/Splendor/.devcontainer/Dockerfile
+++ b/Splendor/.devcontainer/Dockerfile
@@ -2,8 +2,6 @@
 FROM tensorflow/tensorflow:2.16.1-gpu
 
 # Set environment variables for CUDA and cuDNN
-# ENV LD_LIBRARY_PATH /usr/local/cuda-12.3/lib64:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
-# ENV CUDA_HOME /usr/local/cuda
 ENV LD_LIBRARY_PATH=/usr/local/cuda-12.3/lib64:/usr/local/cuda/lib64:/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
 ENV CUDA_HOME=/usr/local/cuda
 
@@ -14,7 +12,7 @@ ENV TF_FORCE_GPU_ALLOW_GROWTH=true
 RUN pip install --no-cache-dir numpy pandas scipy openpyxl pillow && \
     pip install --no-cache-dir debugpy
 
-# Install font
+# Install font used in the game viz
 RUN apt-get update && apt-get install -y \
     fontconfig && \
     fc-cache -f -v && \
