--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ Splendor/next_states.csv
 /Splendor/RL/saved_files/rendered_games
 /Splendor/RL/saved_files/game_states
 /Splendor/RL/saved_files/tensorboard_logs
-Splendor/meta/To-Do list.txt
-Splendor/RL/saved_files/memory.pkl
+/Splendor/meta/To-Do list.txt
+/Splendor/RL/saved_files/memory.pkl
