Added dueling heads and fixed bug in cards data

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Splendor/next_states.csv
 /Splendor/RL/saved_files/tensorboard_logs
 /Splendor/meta/To-Do list.txt
 /Splendor/RL/saved_files/memory.pkl
+Splendor/meta/grid search.xlsx
+Splendor/meta/grid search 2.xlsx
+Splendor/meta/grid search.xlsx
